# yolo-datestamp-detector

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ocr  HANDOFF.md  README.md  annotate.py  augment_hard_cases.py  corrections_dashboard.py  detect_rotation.py  docker-compose.ocr.yml  docker-compose.rotation.yml  docker-compose.yml  enhance_stamps.py  feedback.py  index.html  infer_all.py  justfile  ocr_stamps.py  pyproject.toml  rotation_results.json  setup_scanmyphotos.py  skipped.txt  status.json  stratified_sample.py  train.py
data/: ocr_results.json  quality_results.csv  top50_quality.csv
dataset/: data.yaml
dedup/: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dedup/models/: __init__.py  schema.py
dedup/pipeline/: __init__.py  deduplicate.py  enrich.py  export.py  ingest.py
dedup/stages/: __init__.py  stage0_copy.py  stage1_load.py  stage2_enrich.py  stage3_select.py  stage4_copy.py  stage5_verify.py
dedup/tests/: test_integration.py  test_schema.py
dedup/utils/: __init__.py  db.py  exif.py  notifications.py  threading.py
docker/: Dockerfile  Dockerfile.media-embeddings  Dockerfile.ocr  Dockerfile.ocr-fleet  docker-compose.media-embeddings.yml  docker-compose.ocr-fleet.yml  docker-compose.ocr.yml  docker-compose.yml  nginx-ocr-dashboard.conf
docs/: CLAUDE_CODE_WORKFLOW.md  DATE_EXTRACTION_APPROACHES.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_CHECKLIST.md  PLAN.md  blog-post.md
examples/: stamp_coastal_hills.txt
schema/: media_dates.sql  stamp_tables.sql  (+2 more)
(+3155 files in other folders)
