[project]
name = "photo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.0",
    "pillow>=12.2.0",
    "pytest>=7.0.0",
    "sqlalchemy>=2.0.0",
    "timm>=0.9.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers<4.50",
    "ultralytics>=8.0",
]
