[project]
name = "dedup-pipeline"
version = "0.2.0"
description = "Photo deduplication pipeline with PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pillow==10.1.0",
    "piexif==1.1.3",
    "apprise==1.8.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
]
